[package]
name = "snow_island_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calc_games"  # The name of your binary
path = "src/main.rs"  # The path to your main file, if not src/main.rs

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
clap = "3.0"

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "games" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest